core/static: fix Markdown code vertical-align

--- a/core/static/core/style.scss
+++ b/core/static/core/style.scss
@@ -1452,6 +1452,7 @@ label {
     display: inline-block;
     padding: 4px;
     line-height: 120%;
+    vertical-align: middle;
   }
   a {
     color: $primary-dark-color;
